feat(ui): add material icon font

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,16 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Circuiteer Experimental</title>
+    <title>%REACT_APP_appName%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
